welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:4: error: illegal start of simple pattern
	var case caseOrange: Int = 0;
            ^RunHalf:4: error: '=' expected but ';' found.
	var case caseOrange: Int = 0;
                                    ^